--- a/webapp/modules/workbook/workbook.html
+++ b/webapp/modules/workbook/workbook.html
@@ -3,18 +3,57 @@
 
     <div id="form_wrapper">
         <!-- progressbar -->
-        <ul id="progressbar" class="row">
-            <li class="active col-2 text-center">Stage 1</li>
-            <li class="col-2 text-center">Stage 2</li>
-            <li class="col-2 text-center">Stage 3</li>
-            <li class="col-2 text-center">Stage 4</li>
-            <li class="col-2 text-center">Stage 5</li>
-            <li class="col-2 text-center">Stage 6</li>
+        <ul id="progressbar" class="row py-4">
+            <li class="col-2" ng-class="{'active':item.active}" ng-repeat="item in vm.stageList">
+                {{item.title}}
+            </li>
         </ul>
         <form>
-            Form goes here
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Sample input 1 
+                            <br> 
+                            <small id="emailHelp" class="form-text text-muted">description for sample input 1.</small>
+                        </label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter input 1">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Sample input 2 
+                            <br>  
+                            <small id="emailHelp" class="form-text text-muted">description for sample input 2</small>
+                        </label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter input 2">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Sample input 3 
+                            <br> 
+                            <small id="emailHelp" class="form-text text-muted">description for sample input 3.</small>
+                        </label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter input 3">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Sample input 4 
+                            <br>
+                            <small id="emailHelp" class="form-text text-muted">description for sample input 4</small>
+                        </label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter input 4">
+                    </div>
+                </div>
+            </div>
+            <div class="text-right">
+            <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </form>
     </div>
-    
+
 </div>
 <!-- /.MultiStep Form -->
