--- a/www/modules/home - Copy/home.html
+++ b/www/modules/home - Copy/home.html
@@ -1,25 +1,9 @@
 <!-- MultiStep Form -->
 <div class="home">
-
-    <div id="form_wrapper" style="display: none;">
-        <!-- progressbar -->
-        <ul id="progressbar" class="row">
-            <li class="active col-2 text-center">Stage 1</li>
-            <li class="col-2 text-center">Stage 2</li>
-            <li class="col-2 text-center">Stage 3</li>
-            <li class="col-2 text-center">Stage 4</li>
-            <li class="col-2 text-center">Stage 5</li>
-            <li class="col-2 text-center">Stage 6</li>
-        </ul>
-        <form>
-            Form goes here
-        </form>
-    </div>
-
     <div class="dashboard" id="dashboard">
-        <div class="heading clearfix">
+        <div class="heading clearfix mt-4">
             <h3 class="pull-left">Welcome, Test </h3>
-            <button class="btn btn-info btn-sm pull-right" ng-click="vm.showForm(1);">Complete WorkBook</button>
+            <!--<button class="btn btn-info btn-sm pull-right" ui-sref="app.workbook">Complete WorkBook</button> !-->
         </div>
         <div class="mt-4">
             <div class="clearfix">
@@ -28,6 +12,31 @@
             </div>
             <div class="progress">
                 <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+        </div>
+        <div class="comments">
+            <hr/>
+            <span style="font-weight: normal;font-size: 1em;">Recent Supervisor Messages</span>
+            <div class="comment-container">
+                <div class="comment-item" ng-repeat="item in vm.commentList">
+                    <div class="row align-items-center">
+                        <div class="col-10">
+                            <div class="row">
+                                <div class="col"><b>{{item.from}}</b> - <small>{{item.time | date:'h:mm a, MMMM d, y'}}</small></div>
+                            </div>
+                            <div class="row">
+                                <div class="col">{{item.comment}}</div>
+                            </div>
+                        </div>
+                        <div class="col-2 text-right">
+                            <button class="btn btn-sm" ng-click="vm.showReplySection(item.id)">Reply</button>
+                        </div>
+                    </div>
+                    <div class="reply-section mt-2 text-right" id="comment-reply-{{item.id}}" style="display: none;">
+                        <textarea class="form-control" placeholder="Please type your reply for {{item.from}}"></textarea>
+                        <button class="btn btn-sm btn-primary mt-2" ng-click="">Save</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
