--- a/www/modules/home/home.html
+++ b/www/modules/home/home.html
@@ -2,8 +2,7 @@
 <div class="home">
     <div class="dashboard" id="dashboard">
         <div class="heading clearfix mt-4">
-            <h3 class="pull-left">Welcome, Test </h3>
-            <!--<button class="btn btn-info btn-sm pull-right" ui-sref="app.workbook">Complete WorkBook</button> !-->
+            <h3 class="pull-left">Welcome, User </h3>
         </div>
         <div class="mt-4">
             <div class="clearfix">
