--- a/www/modules/login/login.html
+++ b/www/modules/login/login.html
@@ -30,7 +30,7 @@
                         <div class="seperator">OR</div>
                     </div>
                     <div class="form-group clearfix">
-                        <button class="btn btn-info w-100">Register</button>
+                        <button class="btn btn-info w-100" ui-sref="register">Register</button>
                     </div>
                 </div>
             </div>
