--- a/www/modules/register/register.html
+++ b/www/modules/register/register.html
@@ -12,7 +12,7 @@
             <div class="col">
                 <div class="loginBx">
                     <h3 class="mb-4">Sign Into Your Account</h3>
-                    <form ng-submit="vm.login();">
+                    <form ng-submit="vm.register();">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Firstname" ng-model="vm.formData.firstName" required />
                         </div>
@@ -31,17 +31,20 @@
                         <div class="form-group text-center">
                             <md-radio-group ng-model="vm.formData.userType">
                                 <md-radio-button value="1" class="md-primary">Mentor</md-radio-button>
-                                <md-radio-button value="0" class="md-primary"> Mentee </md-radio-button>
+                                <md-radio-button value="2" class="md-primary"> Mentee </md-radio-button>
                             </md-radio-group>
                         </div>
-                        <div class="form-group" ng-show="vm.formData.userType == 0">
+                        <div class="form-group" ng-show="vm.formData.userType == 2">                            
                             <select ng-model="vm.formData.mentorId">
-                                <option value="1">Mentor 1</option>
-                                <option value="2">Mentor 2</option>
+                                <option ng-repeat="mentor in vm.mentorList" value="{{mentor.uid}}">{{mentor.fullname}}</option>
                             </select>
                         </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-success w-100">Register</button>
+                        <div class="form-group"> 
+                            <button type="submit" class="btn btn-success w-100">
+                                <span ng-hide="vm.registering">Register</span>
+                                <i class="fa fa-refresh fa-spin" ng-show="vm.registering"></i>
+                            </button>
+                            
                         </div>
                     </form>
                 </div>
