--- a/webapp/modules/mentorHome/mentorHome.html
+++ b/webapp/modules/mentorHome/mentorHome.html
@@ -1,5 +1,5 @@
 <!-- MultiStep Form -->
-<div class="adminHome">
+<div class="mentorHome">
     <div class="dashboard" id="dashboard">
         <div class="heading clearfix mt-4">
             <h3 class="pull-left">Welcome, {{vm.user.firstname}} {{vm.user.lastname}} </h3>
