--- a/www/modules/adminHome/adminHome.html
+++ b/www/modules/adminHome/adminHome.html
@@ -2,7 +2,7 @@
 <div class="adminHome">
     <div class="dashboard" id="dashboard">
         <div class="heading clearfix mt-4">
-            <h3 class="pull-left m-0">Welcome, Admin </h3>
+            <h3 class="pull-left">Welcome, {{vm.user.firstname}} {{vm.user.lastname}} </h3>
         </div>
         <div class="row">
             <div class="col">
