--- a/www/modules/home/home.html
+++ b/www/modules/home/home.html
@@ -2,7 +2,7 @@
 <div class="home">
     <div class="dashboard" id="dashboard">
         <div class="heading clearfix mt-4">
-            <h3 class="pull-left">Welcome, User </h3>
+            <h3 class="pull-left">Welcome, {{vm.user.firstname}} {{vm.user.lastname}} </h3>
         </div>
         <div class="mt-4">
             <div class="clearfix">
