--- a/webapp/modules/register/register.html
+++ b/webapp/modules/register/register.html
@@ -30,21 +30,27 @@
                         </div>
                         <div class="form-group text-center">
                             <md-radio-group ng-model="vm.formData.userType">
-                                <md-radio-button value="1" class="md-primary">Mentor</md-radio-button>
-                                <md-radio-button value="2" class="md-primary"> Mentee </md-radio-button>
+                                <md-radio-button value="1" class="md-primary mb-0">Mentor</md-radio-button>
+                                <md-radio-button value="2" class="md-primary mb-0">Mentee</md-radio-button>
                             </md-radio-group>
                         </div>
-                        <div class="form-group" ng-show="vm.formData.userType == 2">                            
-                            <select ng-model="vm.formData.mentorId">
+                        <div class="form-group" ng-show="vm.formData.userType == 2">
+                            <select ng-model="vm.formData.mentorId" class="form-control">
+                                <option value="" disabled>Select your mentor</option>
                                 <option ng-repeat="mentor in vm.mentorList" value="{{mentor.uid}}">{{mentor.fullname}}</option>
                             </select>
                         </div>
-                        <div class="form-group"> 
+                        <div class="form-group text-center" ng-show="vm.regoErr">
+                            <span class="text-danger"><b>{{vm.regoErrMsg}}</b></span>
+                        </div>
+                        <div class="form-group">
                             <button type="submit" class="btn btn-success w-100">
                                 <span ng-hide="vm.registering">Register</span>
-                                <i class="fa fa-refresh fa-spin" ng-show="vm.registering"></i>
+                                <span ng-show="vm.registering"><i class="fa fa-refresh fa-spin"></i></span>
                             </button>
-                            
+                        </div>
+                        <div class="form-group text-right m-0">
+                            <span class="text-info" ui-sref="login" style="cursor: pointer;">Back to Login</span>
                         </div>
                     </form>
                 </div>
