--- a/webapp/modules/register/register.html
+++ b/webapp/modules/register/register.html
@@ -50,7 +50,7 @@
                             </button>
                         </div>
                         <div class="form-group text-right m-0">
-                            <span class="text-info" ui-sref="login" style="cursor: pointer;">Back to Login</span>
+                            <small class="text-info" ui-sref="login" style="cursor: pointer;">Back to Login</small>
                         </div>
                     </form>
                 </div>
