--- a/webapp/modules/admin/admin.html
+++ b/webapp/modules/admin/admin.html
@@ -8,56 +8,44 @@
             <div class="col">
                 <div class="info-container">
                     <h3>5</h3>
-                    <small>Total Mentee Reporting</small>
+                    <small>Total Users</small>
                 </div>
             </div>
             <div class="col">
                 <div class="info-container">
                     <h3>2</h3>
-                    <small>Stage Approvals Pending</small>
-                </div>
-            </div>
-            <div class="col">
-                <div class="info-container">
-                    <h3>0</h3>
-                    <small>Mentee Requests</small>
+                    <small>Inactive Users</small>
                 </div>
             </div>
         </div>
         <div class="comments">
             <hr/>
             <span style="font-weight: normal;font-size: 1em;">
-                Mentee Approval List <br>
+                User List <br>
                 <small>Use <b>Send Message</b> to notify mentee for changes or <b>Approve</b> to approve the current stage.</small>
             </span>
-            <div class="comment-container">
-                <div class="comment-item" ng-repeat="item in vm.progressList">
-                    <div class="row align-items-center">
-                        <div class="col-6">
-                            <div class="row">
-                                <div class="col"><b>{{item.from}}</b> - <small>{{item.time | date:'h:mm a, MMMM d, y'}}</small></div>
-                            </div>
-                            <div class="row">
-                                <div class="col">{{item.stageInfo}}</div>
-                            </div>
-                        </div>
-                        <div class="col-6 text-right">
-                            <button class="btn btn-sm mr-1" ng-click="vm.showReplySection(item.id)">Send Message</button>
-                            <button class="btn btn-sm btn-success">Approve</button>
-                        </div>
-                    </div>
-                    <div class="reply-section mt-2 text-right" id="comment-reply-{{item.id}}" style="display: none;">
-                        <textarea class="form-control" placeholder="Please type your reply for {{item.from}}"></textarea>
-                        <button class="btn btn-sm btn-primary mt-2" ng-click="">Send</button>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="stage-details">
-                                Details of current stage to go here
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="user-list">
+                <table class="table table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">First</th>
+                            <th scope="col">Last</th>
+                            <th scope="col">Handle</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td><label class="switch">
+                              <input type="checkbox" ng-model="te" ng-change="vm.toggleStatus();">
+                              <span class="slider round"></span>
+                            </label></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
