mentor and admin dashboard info integration

--- a/webapp/modules/admin/admin.html
+++ b/webapp/modules/admin/admin.html
@@ -22,7 +22,7 @@
             <hr/>
             <span style="font-weight: normal;font-size: 1em;">
                 User List <br>
-                <small>Use <b>Send Message</b> to notify mentee for changes or <b>Approve</b> to approve the current stage.</small>
+                <small>Use <b>Account Status </b> option to make a user account active/inactive.</small>
             </span>
             <div class="user-list">
                 <table class="table table-bordered">
@@ -30,7 +30,7 @@
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">Name</th>
-                            <th scope="col">UserType</th>
+                            <th scope="col">User Type</th>
                             <th scope="col">Account Status</th>
                         </tr>
                     </thead>
