--- a/webapp/modules/admin/competency/competency.html
+++ b/webapp/modules/admin/competency/competency.html
@@ -19,6 +19,9 @@
                 </div>
             </div>
         </div>
+        <div class="text-right">
+                <button type="submit" class="btn btn-primary" ng-click="vm.save();">Submit</button>
+            </div>
     </div>
 
 </div>
