admin module dynamic sections

--- a/webapp/modules/admin/competency/competency.html
+++ b/webapp/modules/admin/competency/competency.html
@@ -1,27 +1,35 @@
 <!-- MultiStep Form -->
 <div class="competency">
 
-    <div class="content">
+    <div class="content">        
         <div class="com-list" ng-repeat="item in vm.competencyList">
             <div class="com-header clearfix">
                 <div class="pull-left">
                     <input type="text" ng-model="item.title"></div>
                 <div class="pull-right clearfix">
-                    <div class="pull-left pr-4" ng-click="vm.addQuestion(item);"><i class="fa fa-plus"></i></div>
+                    <div class="pull-left pr-4" ng-click="vm.addSection(item);"><i class="fa fa-plus"></i></div>
                     <div class="pull-left" ng-click="item.show=!item.show"><i class="fa fa-angle-down"></i></div>
                 </div>
             </div>
             <div class="com-body">
-                <div class="com-question-set" ng-repeat="question in item.questions" ng-show="item.show">
+                <div class="com-question-set" ng-repeat="section in item.section" ng-show="item.show">
                     <div class="com-question">
-                        <div><input type="text" ng-model="question.title" placeholder="Type competency here.."></div>
+                        <div>
+                            <hr>
+                            <input type="text" ng-model="section.heading" placeholder="Type heading here.." />
+                            <button ng-click="vm.addQuestion(section);">add question</button>
+                            <div ng-repeat="question in section.questions">
+                                <textarea type="text" ng-model="question.text" placeholder="Type competency here.."></textarea>
+                            </div>
+                             <hr>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="text-right">
-                <button type="submit" class="btn btn-primary" ng-click="vm.save();">Submit</button>
-            </div>
+            <button type="submit" class="btn btn-primary" ng-click="vm.save();">Submit</button>
+        </div>
     </div>
 
 </div>
