--- a/webapp/modules/mentee/workbook/workbook.html
+++ b/webapp/modules/mentee/workbook/workbook.html
@@ -9,51 +9,57 @@
             </li>
         </ul>
         <form>
-            <div class="row">
-                <div class="col">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Sample input 12
+            <div ng-show="vm.stageVisibility.stage1">
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="stagesList.stage1.agreement.menteeName">Mentee Name
                             <br> 
-                            <small id="emailHelp" class="form-text text-muted">description for sample input 1.</small>
+                            <small id="stagesList.stage1.agreement.menteeName" class="form-text text-muted">description for sample input 3.</small>
                         </label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter input 1">
+                            <input type="text" class="form-control" ng-model="stagesList.stage1.agreement.menteeName" placeholder="Enter mentee name">
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Sample input 2 
-                            <br>  
-                            <small id="emailHelp" class="form-text text-muted">description for sample input 2</small>
-                        </label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter input 2">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Sample input 3 
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="stagesList.stage1.agreement.menteeRole">Mentee Role
                             <br> 
-                            <small id="emailHelp" class="form-text text-muted">description for sample input 3.</small>
+                            <small id="stagesList.stage1.agreement.menteeRole" class="form-text text-muted">description for sample input 3.</small>
                         </label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter input 3">
+                            <input type="text" class="form-control" ng-model="stagesList.stage1.agreement.menteeRole" placeholder="Enter mentee role">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="stagesList.stage1.agreement.menteeWorkPlace">Mentee Workplace
+                            <br> 
+                            <small id="stagesList.stage1.agreement.menteeWorkPlace" class="form-text text-muted">description for sample input 3.</small>
+                        </label>
+                            <input type="text" class="form-control" ng-model="stagesList.stage1.agreement.menteeWorkPlace" placeholder="Enter mentee workplace">
+                        </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Sample input 4 
-                            <br>
-                            <small id="emailHelp" class="form-text text-muted">description for sample input 4</small>
-                        </label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter input 4">
-                    </div>
+                <div class="text-right">
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </div>
-            <div class="text-right">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
+
+            <div ng-show="vm.stageVisibility.stage2">2</div>
+            <div ng-show="vm.stageVisibility.stage3">3</div>
+            <div ng-show="vm.stageVisibility.stage4">4</div>
+            <div ng-show="vm.stageVisibility.stage5">5</div>
         </form>
     </div>
 
 </div>
-<!-- /.MultiStep Form -->
+<!-- 
+<div class="col">
+                        <div class="form-group">
+                            <label for="stagesList.stage1.agreement.menteeWorkPlace">Mentee Workplace
+                            <br> 
+                            <small id="stagesList.stage1.agreement.menteeWorkPlace" class="form-text text-muted">description for sample input 3.</small>
+                        </label>
+                            <input type="text" class="form-control" ng-model="stagesList.stage1.agreement.menteeWorkPlace"placeholder="Enter mentee workplace">
+                        </div>
+                    </div>
+-->
